Created attachment 113053 [details] Apple crash trace +++ This bug was initially created as a clone of Bug #88814 +++ Using the TestAddressen.odt file from bug 88814. In form design mode, adapt the lower grid control to point to your MacAb.odb file, and relevant fields that are bound. Save the form. Click on the first record of the upper grid control. Move down through the records with the arrow key, until you reach the last record. When you move the cursor down again to New record, LO crashes. Apple trace enclosed.
Created attachment 113055 [details] full bt
Norbert Thiebaud committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=90c3e6905daefad3d57c14090cd30a0d280ec989 tdf#89048 Macab initialize record list even for never-match condition. It will be available in 4.5.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Norbert Thiebaud committed a patch related to this issue. It has been pushed to "libreoffice-4-3": http://cgit.freedesktop.org/libreoffice/core/commit/?id=954840d55ede990b368c5314bdb876ced56cfbe2&h=libreoffice-4-3 tdf#89048 Macab initialize record list even for never-match condition. It will be available in 4.3.7. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Norbert Thiebaud committed a patch related to this issue. It has been pushed to "libreoffice-4-4": http://cgit.freedesktop.org/libreoffice/core/commit/?id=35892dfbbc1779306e11d2ea87c5aaead43356d2&h=libreoffice-4-4 tdf#89048 Macab initialize record list even for never-match condition. It will be available in 4.4.1. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
(In reply to Commit Notification from comment #4) > The patch should be included in the daily builds available at > http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More > information about daily builds can be found at: > http://wiki.documentfoundation.org/Testing_Daily_Builds > Affected users are encouraged to test the fix and report feedback. Thanks Norbert, will rebuild master tonight and re-test.
Confirming that it works in master.