tdf#89048 Macab initialize record list even for never-match condition.

Change-Id: I323f6532d00f30cde50616e9399cad6bbe00cb8c
Reviewed-on: https://gerrit.libreoffice.org/14310
Reviewed-by: Lionel Elie Mamane <lionel@mamane.lu>
Tested-by: Lionel Elie Mamane <lionel@mamane.lu>